docs: cleaning duplicate data after normalizing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -256,12 +256,30 @@ services:
         ipv4_address: 110.0.0.118
 
   airflow-apiserver:
-    <<: *airflow-common
+    build:
+      dockerfile: ./airflow/dockerfile
     container_name: airflow-apiserver
     hostname: airflow-apiserver
     command: api-server
     ports:
       - "8080:8080"
+    environment:
+      <<: *airflow-common-env
+    volumes:
+      - ./airflow/dags:/opt/airflow/dags
+      - ./airflow/dbt:/opt/dbt
+      - ./airflow/logs:/opt/airflow/logs
+      - ./airflow/config:/opt/airflow/config
+      - ./airflow/plugins:/opt/airflow/plugins
+      - /var/run/docker.sock:/var/run/docker.sock
+    user: "${AIRFLOW_UID:-50000}:0"
+    depends_on:
+      redis:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+      airflow-init:
+        condition: service_completed_successfully
     healthcheck:
       test: ["CMD", "curl", "--fail", "http://localhost:8080/api/v2/version"]
       interval: 30s
@@ -269,22 +287,41 @@ services:
       retries: 5
       start_period: 30s
     restart: always
-    depends_on:
-      <<: *airflow-common-depends-on
-      airflow-init:
-        condition: service_completed_successfully
     networks:
       rede:
         ipv4_address: 110.0.0.119
     cpus: 2
     mem_limit: 2g
     memswap_limit: 2g
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "1"
 
   airflow-scheduler:
-    <<: *airflow-common
+    build:
+      dockerfile: ./airflow/dockerfile
     container_name: airflow-scheduler
     hostname: airflow-scheduler
     command: scheduler
+    environment:
+      <<: *airflow-common-env
+    volumes:
+      - ./airflow/dags:/opt/airflow/dags
+      - ./airflow/dbt:/opt/dbt
+      - ./airflow/logs:/opt/airflow/logs
+      - ./airflow/config:/opt/airflow/config
+      - ./airflow/plugins:/opt/airflow/plugins
+      - /var/run/docker.sock:/var/run/docker.sock
+    user: "${AIRFLOW_UID:-50000}:0"
+    depends_on:
+      redis:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+      airflow-init:
+        condition: service_completed_successfully
     healthcheck:
       test: ["CMD", "curl", "--fail", "http://localhost:8974/health"]
       interval: 30s
@@ -292,13 +329,17 @@ services:
       retries: 5
       start_period: 30s
     restart: always
-    depends_on:
-      <<: *airflow-common-depends-on
-      airflow-init:
-        condition: service_completed_successfully
     networks:
       rede:
         ipv4_address: 110.0.0.120
+    cpus: 1
+    mem_limit: 1g
+    memswap_limit: 1g
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "1"
 
   airflow-dag-processor:
     <<: *airflow-common
